--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ a.banner-btn {
     text-decoration: none;
     font-size: 20px;
     display: inline-block;
-    background: red;
+    background: blue;
     color: #fff;
     padding: 13px 30px;
     border-radius: 30px;
